--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "cookie-session": "^1.0.2",
     "body-parser": "~1.5.2",
     "request":"~2.36.0",
-    "ldapjs":"*"
+    "ldapjs":"*",
+    "wechat-enterprise-api":"0.3.0"
   },
   "author": "xiLiu|liuxieric123@gmail.com",
   "license": "MIT"
